# TuLabSound

./: .gitignore  CMakeLists.txt  README.md  gem.json
Code/: CMakeLists.txt  tulabsound_api_files.cmake  tulabsound_editor_private_files.cmake  tulabsound_editor_shared_files.cmake  tulabsound_editor_tests_files.cmake  tulabsound_private_files.cmake  tulabsound_shared_files.cmake  tulabsound_tests_files.cmake
Code/Include/TuLabSound/: AudioBusManagerInterface.h  AudioPlayerBus.h  PlayerAudioEffect.h  SoundAsset.h  TuLabSoundBus.h  TuLabSoundId.h  TuLabSoundTypeIds.h  Utils.h
Code/Include/TuLabSound/Effects/: VisualizerBus.h
Code/Platform/Android/: tulabsound_private_files.cmake
Code/Platform/Linux/: PAL_linux.cmake  tulabsound_shared_files.cmake
Code/Platform/Mac/: tulabsound_private_files.cmake
Code/Platform/Windows/: PAL_windows.cmake  tulabsound_shared_files.cmake
Code/Platform/iOS/: tulabsound_private_files.cmake
Code/Source/: TuLabSoundModuleInterface.cpp  TuLabSoundModuleInterface.h  Utils.cpp
Code/Source/BuilderSettings/: SoundAssetSettings.cpp  SoundAssetSettings.h  SoundBuilderSettings.cpp  SoundBuilderSettings.h  SoundBuilderSettingsManager.cpp  SoundBuilderSettingsManager.h  SoundPresetSettings.cpp  SoundPresetSettings.h
Code/Source/Clients/: BusManager.cpp  BusManager.h  SoundAsset.cpp  SoundAssetHandler.cpp  SoundAssetHandler.h  SoundPlayer.cpp  SoundPlayer.h  TuLabSoundModule.cpp  TuLabSoundSystemComponent.cpp  TuLabSoundSystemComponent.h
Code/Source/Clients/Components/: AudioPlayerComponent.cpp  AudioPlayerComponent.h  VisualizerComponent.cpp  VisualizerComponent.h
Code/Source/Clients/Components/Configs/: AudioPlayerComponentConfig.cpp  AudioPlayerComponentConfig.h
Code/Source/Clients/Components/Controllers/: AudioPlayerComponentController.cpp  AudioPlayerComponentController.h
Code/Source/Clients/Effects/: LabHrtfEffect.cpp  LabHrtfEffect.h  RadioEffect.cpp  RadioEffect.h  VisualizerEffect.cpp  VisualizerEffect.h
Code/Source/Tools/: SoundAssetBuilder.cpp  SoundAssetBuilder.h  TuLabSound.qrc  TuLabSoundEditorModule.cpp  TuLabSoundEditorSystemComponent.cpp  TuLabSoundEditorSystemComponent.h
Code/Source/Tools/Components/: EditorAudioPlayerComponent.cpp  EditorAudioPlayerComponent.h
Config/: SoundBuilder.json
Config/TLS/: Default.preset
Registry/: assetprocessor_settings.setreg  audio.assetprocessor.setreg
